--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mongoose": "^6.8.2",
-    "nodemon": "^2.0.20",
-    "socketio": "^1.0.0"
+    "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "socket.io": "^4.5.4"
   }
 }
