--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,10 @@
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-emoji": "^0.5.0",
-    "react-router-dom": "^6.7.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
